{
  "version": 4,
  "terraform_version": "1.2.3",
  "serial": 5,
  "lineage": "a77b8738-06e8-e097-54e3-cb0d5f4ca350",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "PlayMarriagenow",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-052efd3df9dad4825",
            "arn": "arn:aws:ec2:us-east-1:817347832927:instance/i-08670383038b85a03",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-08670383038b85a03",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.large",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0ee184539adfbde88",
            "private_dns": "ip-172-31-93-18.ec2.internal",
            "private_ip": "172.31.93.18",
            "public_dns": "ec2-54-173-61-37.compute-1.amazonaws.com",
            "public_ip": "54.173.61.37",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-08524414d28d6d5e7",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "PlayMarriagenow-SG"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-05dff1e5fbe7d1c45",
            "tags": {
              "Name": "DebuggersPlayMarriagenow"
            },
            "tags_all": {
              "Name": "DebuggersPlayMarriagenow"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-09dd7e9a251d5588c"
            ]
          },
          "dependencies": [
            "aws_security_group.sgpmn"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "PlayMarriagenowAnsible",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-052efd3df9dad4825",
            "arn": "arn:aws:ec2:us-east-1:817347832927:instance/i-078c79fadd3b20208",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-078c79fadd3b20208",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.large",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0cdbc8cf45e458b67",
            "private_dns": "ip-172-31-92-253.ec2.internal",
            "private_ip": "172.31.92.253",
            "public_dns": "ec2-34-201-65-70.compute-1.amazonaws.com",
            "public_ip": "34.201.65.70",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0deb5c6e0d33c5a92",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "PlayMarriagenowA-SG"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-05dff1e5fbe7d1c45",
            "tags": {
              "Name": "DebuggersPlayMarriagenowAnsible"
            },
            "tags_all": {
              "Name": "DebuggersPlayMarriagenowAnsible"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-021cf93007e93ac00"
            ]
          },
          "dependencies": [
            "aws_security_group.sgpmna"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sgpmn",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:817347832927:security-group/sg-09dd7e9a251d5588c",
            "description": "Allow incoming HTTP connections \u0026 SSH access",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-09dd7e9a251d5588c",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow incoming HTTP connections",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow incoming SSH access",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "PlayMarriagenow-SG",
            "name_prefix": "",
            "owner_id": "817347832927",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "DebuggersPlayMarriagenowSG"
            },
            "tags_all": {
              "Name": "DebuggersPlayMarriagenowSG"
            },
            "timeouts": null,
            "vpc_id": "vpc-04b4709bc7d00849d"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sgpmna",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:817347832927:security-group/sg-021cf93007e93ac00",
            "description": "Allow incoming HTTP connections \u0026 SSH access",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-021cf93007e93ac00",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow incoming HTTP connections",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow incoming SSH access",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "PlayMarriagenowA-SG",
            "name_prefix": "",
            "owner_id": "817347832927",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "DebuggersPlayMarriagenowASG"
            },
            "tags_all": {
              "Name": "DebuggersPlayMarriagenowASG"
            },
            "timeouts": null,
            "vpc_id": "vpc-04b4709bc7d00849d"
          },
          "sensitive_attributes": []
        }
      ]
    }
  ]
}